@@ -77,6 +77,8 @@ Changes in current version:
  o provide bufferevent_input and bufferevent_output without requiring knowledge of the structure
  o introduce bufferevent_setcb and bufferevent_setfd to allow better manipulation of bufferevents
  o convert evhttp_connection to use bufferevents.
+ o use libevent's internal timercmp on all platforms, to avoid bugs on old platforms where timercmp(a,b,<=) is buggy.
+
 	
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
